# KayStichs-contracts

./: .gitignore  ARCHITECTURE.md  BRANDING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  FAQ.md  INTEGRATION.md  LICENSE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  clippy.toml  course_completion_payout_audit.md  rustfmt.toml  supa_solution.js  wasm-info.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
contracts/badge-nft/: Cargo.toml  Makefile  README.md
contracts/badge-nft/src/: lib.rs  types.rs
contracts/course-registry/: Cargo.toml  Makefile  README.md
contracts/course-registry/src/: lib.rs  test.rs  types.rs
contracts/course-registry/test_snapshots/test/: test_complete_module_different_learners.1.json  test_complete_module_emits_event.1.json  test_complete_module_exceeds_total_modules.1.json  test_complete_module_increments_progress.1.json  test_complete_module_multiple_times.1.json  test_complete_module_nonexistent_course.1.json  test_complete_module_unauthorized_verifier.1.json  test_get_progress_tracks_completion.1.json
contracts/governance/: Cargo.toml  Makefile  README.md
contracts/governance/src/: lib.rs  types.rs
contracts/quest-engine/: Makefile  README.md
contracts/quest-engine/src/: lib.rs  types.rs
contracts/reward-pool/: Cargo.toml  Makefile  README.md
contracts/reward-pool/src/: lib.rs  types.rs
contracts/stake-vault/: Cargo.toml  Makefile  README.md
contracts/stake-vault/src/: lib.rs  types.rs
scripts/: build.sh  check-tools.sh  lint.sh  test.sh  verify-rebrand.sh
