[package]
name = "governance"
version = "0.1.0"
edition = "2021"
authors = ["KayStichs Team"]
description = "Governance contract for the KayStichs platform"
license = "MIT"
repository = "https://github.com/kaystichs/kaystichs-contracts"

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
badge-nft = { path = "../badge-nft" }
